fix scrollbar

--- a/src/ui/components/usersListTable/UsersListTable.scss
+++ b/src/ui/components/usersListTable/UsersListTable.scss
@@ -7,7 +7,7 @@ $container-padding-v: 24px;
   display: block;
   width: 100%;
   max-width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .users-list-table {
